[tool.poetry]
name = "hosaru"
version = "0.1.0"
description = ""
authors = ["Kirill <kirill.potapenkov@mail.ru>"]
readme = "README.md"
packages = [{include = "hosaru"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
welcome = 'hosaru.welcomee:main'
